fix(reportGen): fix calculation with multiple meter readings